# internal/api/router.go
@@ -3,9 +3,9 @@ package api
 import (
 	"seno-blackdragon/internal/api/handler"
 	"seno-blackdragon/internal/config"
-	"seno-blackdragon/internal/redisstore"
 	"seno-blackdragon/internal/repository"
 	"seno-blackdragon/internal/service"
+	"seno-blackdragon/internal/store"
 	"seno-blackdragon/pkg/middleware"
 	"seno-blackdragon/pkg/pass"
 	"time"
@@ -22,7 +22,7 @@ import (
 // @description     This is a black dragon server.
 // @host            localhost:8080
 // @BasePath        /api/v1
-func InitRouter(db *pgx.Conn, logger *zap.Logger, redis *redisstore.ClientSet, cfg *config.Config) *gin.Engine {
+func InitRouter(db *pgx.Conn, logger *zap.Logger, redis *store.ClientSet, cfg *config.Config) *gin.Engine {
 	router := gin.Default()
 	router.Use(middleware.TraceAndLogFullMiddleware(logger, nil))
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
@@ -44,7 +44,7 @@ func InitRouter(db *pgx.Conn, logger *zap.Logger, redis *redisstore.ClientSet, c
 		authHandler := handler.NewAuthHandler(authService)
 		auth := v1.Group("/auth")
 		{
-			// auth.POST("/login", authHandler.Login)
+			auth.POST("/login", authHandler.Login)
 			auth.POST("/register", authHandler.Register)
 		}
 	}
